# langgraph-ai-compliance-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  scripts.py  train_classifier.py
.deepeval/: .deepeval_telemetry.txt
.github/workflows/: ci.yml
configs/: regulations.yaml
configs/prompts/: answer.yaml  apply.yaml  critic.yaml  ground.yaml  needs_research.yaml  question_generation.yaml  synthesis.yaml
datasets/: results_deepeval.json
datasets/agent-eval/: retrieval.json
datasets/eval/: retrieval.json  vis_deepeval.py  visualize.py
datasets/ml-classifier-eval/: questions.csv
datasets/skeletons/: 20260528_204445_MiCA :_émetteur_de_crypto‑acti.json  20260528_204852_MiCA – prestataire_de_services.json  20260528_205201_MiCA :_PSCA_(Prestataire_de_Se.json  20260528_205440_DORA_–_opérateur_de_services_e.json  20260528_213857_MiCA :_émetteur_de_crypto‑acti.json  20260528_214323_MiCA :_émetteur_de_crypto‑acti.json  20260528_214739_MiCA — crypto‑actifs :_identif.json  20260528_214840_MiCA :_PSCA_(Prestataire_de_Se.json  20260528_215031_DORA_–_opérateur_de_services_e.json  20260528_215241_DORA — opérateur_de_services_e.json  20260528_215639_GDPR_–_responsable_du_traiteme.json  20260528_215758_MiCA :_émetteur_de_crypto‑acti.json  20260528_215916_MiCA — prestataire_de_services.json  20260528_220141_MiCA :_PSCA_(Prestataire_de_Se.json  20260528_220317_DORA_–_opérateur_de_services_e.json  20260528_220649_MiCA :_émetteur_de_crypto‑acti.json  20260528_221025_MiCA — prestataire_de_services.json  20260528_221506_MiCA :_PSCA_(Prestataire_de_Se.json  20260528_221642_MiCA :_émetteur_de_crypto‑acti.json  20260528_222012_MiCA :_émetteur_de_crypto‑acti.json  20260528_222335_MiCA_–_prestataire_de_services.json  20260528_222446_MiCA :_PSCA_(Prestataire_de_Se.json  20260528_222703_DORA_–_article_13 et 14 :_obli.json  20260528_222934_MiCA :_émetteur_de_crypto‑acti.json  20260528_223246_MiCA — prestataire_de_services.json  20260530_232746_DORA_–_opérateur_de_services_e.json  20260530_232746_MiCA :_PSCA_(Prestataire_de_Se.json  20260530_232748_MiCA_–_prestataire_de_services.json  20260530_232752_MiCA :_émetteur_de_crypto‑acti.json  20260531_195550_DORA_–_opérateur_de_services_e.json  20260531_195550_MiCA :_PSCA_(Prestataire_de_Se.json  (+118 more)
db/: init.sql  schema.sql
models/: thresholds.joblib
src/api/: app.py
tests/: conftest.py
(+88 files in other folders)
