[project]
name = "langgraph-ai-compliance-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "deepeval>=4.0.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain-mistralai>=1.1.4",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.6.1",
    "langgraph>=1.1.9",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "ragas>=0.4.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]
