[project]
name = "langgraph-ai-compliance-assistant"
version = "0.1.0"
description = "RAG-based compliance assistant for EU financial regulations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "joblib>=1.5.3",
    "langchain>=0.3.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "langfuse>=4.6.1",
    "langgraph>=1.1.9",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "uvicorn>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "deepeval>=4.0.3",
    "mlflow>=3.14.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: isolated component tests, all external deps (LLM/DB/HTTP) mocked",
    "integration: components wired together against a live test database (no real LLM)",
    "e2e: full system via docker compose with a real LLM",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]